skill-management-system/k8s/app/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: skill-management-system-prod
  labels:
    name: skill-management-system-prod
    environment: production
    app.kubernetes.io/part-of: skill-management-system
