skill-management-system/k8s/app/overlays/prod/keycloak-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: keycloak
        args:
        - start
        - --db=postgres
        - --import-realm
        - --health-enabled=true
        - --metrics-enabled=true
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "600m"
